--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		   <!-- <version>2.8.5</version> -->
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
