--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
 		    <artifactId>gson</artifactId>
 		   <!-- <version>2.8.5</version> -->
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.dongliu/gson-java8-datatype -->
+		<dependency>
+			<groupId>net.dongliu</groupId>
+			<artifactId>gson-java8-datatype</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
