--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
