--- a/pom.xml
+++ b/pom.xml
@@ -49,14 +49,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter-pubsub</artifactId>
-		</dependency>
+		</dependency>    -> PRECISA DE CONFIGURAÇÃO DE PUB/SUB
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-gcp-starter-storage</artifactId>
-		</dependency>
+		</dependency>   -> Precisa de CREDENCIAL!-->
 
 		<dependency>
 			<groupId>mysql</groupId>
