--- a/src/main/resources/application-homologacao.properties
+++ b/src/main/resources/application-homologacao.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://localhost:3306/emissorfiscal_teste?useSSL=false&useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/garageando?useSSL=false&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
