--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.datasource.sql-script-encoding=UTF-8
+spring.datasource.sql-script-encoding=utf-8
 spring.datasource.hikari.data-source-properties.useUnicode=true
-spring.datasource.hikari.data-source-properties.characterEncoding=UTF-8
+spring.datasource.hikari.data-source-properties.characterEncoding=utf-8
 
 logging.level.=DEBUG
 logging.level.org.springframework.web=DEBUG
